tests/negative/struct_array_return.ax
module struct_array_return;

struct Buffer {
    data: [4]u8;
}

fn bad() -> Buffer {
    return 0;
}

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    return 0;
}
